appId: ${APP_ID}
---
- launchApp:
    stopApp: true
    clearState: true
- waitForAnimationToEnd
- assertVisible: '首页'
- tapOn: '我的'
- assertVisible:
    id: e2e-profile-login-btn
- tapOn:
    id: e2e-profile-login-btn
- tapOn:
    text: '邮箱登录/注册'
    optional: true
- assertVisible:
    id: e2e-login-email
- tapOn:
    id: e2e-login-email
- inputText: ${E2E_EMAIL}
- tapOn:
    id: e2e-login-password
- inputText: ${E2E_PASSWORD}
- assertVisible: '登录'
